--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -7,7 +7,6 @@ th, td {
     padding: 0.5rem 1rem;
     border: 1px solid var(--color-surface);
     text-align: left;
-    flex-grow: 1;
 }
 
 .header {
